src/objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hired__c</fullName>
        <label>Date Hired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Store Manager</fullName>
                </value>
                <value>
                    <fullName>Therapist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Alias__c</columns>
        <columns>Birth_Date__c</columns>
        <columns>Name__c</columns>
        <columns>Role__c</columns>
        <columns>Active__c</columns>
        <columns>Date_Hired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Staff - {00}</displayFormat>
        <label>Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>